tests/spec/build/snapshots/multipackage_type_alias_enum_pattern_matching.snap
---
source: tests/spec/build/mod.rs
---
// === api/mod.go ===
package api

import "github.com/user/myproject/events"

type UIEvent = events.Event


// === events/mod.go ===
package events

func MakeEventClick(arg0 int, arg1 int) Event {
	return Event{Tag: EventClick, X: arg0, Y: arg1}
}

func MakeEventKeyPress(arg0 string) Event {
	return Event{Tag: EventKeyPress, KeyPress: arg0}
}

func MakeEventClose() Event {
	return Event{Tag: EventClose}
}

type EventTag uint8

const (
	EventClick EventTag = iota
	EventKeyPress
	EventClose
)

type Event struct {
	Tag      EventTag
	X        int
	Y        int
	KeyPress string
}


// === main.go ===
package main

import (
	"github.com/user/myproject/api"
	"github.com/user/myproject/events"
)

func main() {
	e := api.UIEvent{
		Tag: events.EventClick,
		X:   10,
		Y:   20,
	}
	switch e.Tag {
	case events.EventClick:
		_ = e.X + e.Y
	case events.EventKeyPress:
		_ = e.KeyPress
	}
}
