tests/spec/build/snapshots/multipackage_type_alias_struct_literal.snap
---
source: tests/spec/build/mod.rs
---
// === api/mod.go ===
package api

import "github.com/user/myproject/internal"

type PublicSecret = internal.Secret


// === internal/mod.go ===
package internal

type Secret struct {
	Value int
}


// === main.go ===
package main

import "github.com/user/myproject/api"

func main() {
	s := api.PublicSecret{Value: 42}
	_ = s.Value
}
