tests/spec/build/snapshots/multiple_bounded_impl_blocks_merge_constraints.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type Printable interface {
	PrintVal() string
}

type Summable interface {
	SumVal() int
}

type Container[T any] struct {
	value T
	label string
}

func (c Container[T]) String() string {
	return fmt.Sprintf("Container { value: %v, label: %v }", c.value, c.label)
}

func Container_display[T Printable](self Container[T]) string {
	return fmt.Sprintf("[%s] %s", self.label, self.value.PrintVal())
}

func Container_total[T Summable](self Container[T]) int {
	return self.value.SumVal()
}

type Item struct {
	name  string
	count int
}

func (i Item) String() string {
	return fmt.Sprintf("Item { name: %v, count: %v }", i.name, i.count)
}

func (i Item) PrintVal() string {
	return i.name
}

func (i Item) SumVal() int {
	return i.count
}

func main() {
	c := Container[Item]{
		value: Item{
			name:  "widget",
			count: 5,
		},
		label: "box",
	}
	fmt.Println(Container_display(c))
	fmt.Printf("total: %d\n", Container_total(c))
}
