tests/spec/build/snapshots/multiple_bounded_impl_blocks_use_declared_constraints.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type Printable interface {
	PrintVal() string
}

type Summable interface {
	SumVal() int
}

type Container[T interface {
	Printable
	Summable
}] struct {
	value T
	label string
}

func (c Container[T]) display() string {
	return "[" + c.label + "] " + c.value.PrintVal()
}

func (c Container[T]) total() int {
	return c.value.SumVal()
}

type Item struct {
	name  string
	count int
}

func (i Item) PrintVal() string {
	return i.name
}

func (i Item) SumVal() int {
	return i.count
}

func main() {
	c := Container[Item]{
		value: Item{
			name:  "widget",
			count: 5,
		},
		label: "box",
	}
	fmt.Println(c.display())
	fmt.Printf("total: %d\n", c.total())
}
