tests/spec/build/snapshots/nested_generics_with_bounded_impls.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/ops"
	"github.com/user/myproject/types"
)

type Label struct {
	text string
}

func (l Label) Show() string {
	return l.text
}

func main() {
	l1 := Label{text: "x"}
	l2 := Label{text: "y"}
	inner_pair := types.Pair[Label, Label]{
		First:  l1,
		Second: l2,
	}
	tagged_pair := types.Tagged[types.Pair[Label, Label]]{
		Value: inner_pair,
		Label: "coords",
	}
	fmt.Println(ops.DescribeTaggedPair(tagged_pair))
}


// === ops/lib.go ===
package ops

import (
	"github.com/user/myproject/traits"
	"github.com/user/myproject/types"
)

func DescribeTaggedPair[A traits.Showable, B traits.Showable](tp types.Tagged[types.Pair[A, B]]) string {
	return "tagged_pair: " + tp.Display()
}


// === traits/lib.go ===
package traits

type Showable interface {
	Show() string
}


// === types/lib.go ===
package types

import "github.com/user/myproject/traits"

type Pair[A traits.Showable, B traits.Showable] struct {
	First  A
	Second B
}

func (p Pair[A, B]) Show() string {
	return "(" + p.First.Show() + ", " + p.Second.Show() + ")"
}

func (p Pair[A, B]) Display() string {
	return "Pair" + p.Show()
}

type Tagged[T traits.Showable] struct {
	Value T
	Label string
}

func (t Tagged[T]) Show() string {
	return "[" + t.Label + "] " + t.Value.Show()
}

func (t Tagged[T]) Display() string {
	return "Tagged" + t.Show()
}
