tests/spec/build/snapshots/nested_module_static_method_call.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/models/user"

func main() {
	_ = user.User_New("Alice", "alice@test.com")
}


// === models/user/user.go ===
package user

type User struct {
	Name  string
	Email string
}

func User_New(name, email string) User {
	return User{
		Name:  name,
		Email: email,
	}
}
